--- a/build.gradle
+++ b/build.gradle
@@ -28,24 +28,30 @@ repositories {
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
-    runtime('com.h2database:h2')
+    compile group: 'com.github.spullara.mustache.java', name: 'compiler', version: '0.9.5'
+    compileOnly('org.projectlombok:lombok')
+    
     testCompile 'junit:junit:4.12'
     testCompileOnly('org.projectlombok:lombok')
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile group: 'com.ninja-squad', name: 'DbSetup', version: '2.1.0'
+    testRuntime('com.h2database:h2')
 }
+
 sonarqube {
     properties {
         property "sonar.host.url", "http://sonar.cotos.ricoh.co.jp/"
         property "sonar.jacoco.reportPaths", "${project.buildDir}/jacoco/test.exec"
     }
 }
+
 def repo = new File(rootDir, "repository")
 
 uploadArchives {
     repositories {
         mavenDeployer {
             repository url: "file://${repo.absolutePath}"
-            pom.version = '1.0.0'
+            pom.version = '0.0.1'
             pom.groupId = 'jp.co.ricoh.cotos'
             pom.artifactId = 'common-libraries'
         }
