--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ repositories {
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('org.springframework.boot:spring-boot-starter-security')
+    compile('org.springframework.boot:spring-boot-starter-web')
     compile group: 'com.github.spullara.mustache.java', name: 'compiler', version: '0.9.5'
     compileOnly('org.projectlombok:lombok')
     compile('org.hibernate:hibernate-validator:5.3.5.Final')
@@ -41,8 +43,11 @@ dependencies {
     compile group: 'wsdl4j', name: 'wsdl4j', version: '1.5.2'
     compile group: 'commons-discovery', name: 'commons-discovery', version: '0.4'
     compile fileTree(dir: 'libs', include: '*.jar')
+    runtime('org.springframework.boot:spring-boot-devtools')
     
     testCompile 'junit:junit:4.12'
+    testCompile 'org.jmockit:jmockit:1.21'
+    testCompile('org.dbunit:dbunit:2.5.4')
     testCompileOnly('org.projectlombok:lombok')
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile group: 'com.ninja-squad', name: 'DbSetup', version: '2.1.0'
