--- a/src/test/resources/config/application-ci.yml
+++ b/src/test/resources/config/application-ci.yml
@@ -1,9 +1,3 @@
-cotos:
-  auth:
-    authentications:
-      鍵: APIを呼ぶことが出来るアプリケーション名
-      鍵2: 別のアプリケーション
-    throughURIs: /dummy, /swagger-ui.html, /dummy2
 spring:
   datasource:
     url: jdbc:oracle:thin:@dev-db.cotos.ricoh.co.jp:1521/pdb1
@@ -17,16 +11,6 @@ spring:
     properties:
       hibernate:
         show_sql: true
-        use_sql_comments: true
-        format_sql: true
-        default_schema: 
-        proc:
-          param_null_passing: true
-        enable_lazy_load_no_trans: true
-  jackson:
-    serialization:
-      fail-on-empty-beans: false
-remote:
-  momauthority:
-    url: http://165.96.254.183:10110/jmo/services/KengenService
-    relatedid: JMR
+        use_sql_comments: false
+        format_sql: false
+        default_schema: cotos_ci
