--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     testCompile('org.dbunit:dbunit:2.5.4')
     testCompileOnly('org.projectlombok:lombok')
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('org.springframework.security:spring-security-test')
     testCompile group: 'com.ninja-squad', name: 'DbSetup', version: '2.1.0'
     testRuntime('com.h2database:h2')
 }
@@ -68,7 +69,7 @@ uploadArchives {
     repositories {
         mavenDeployer {
             repository url: "file://${repo.absolutePath}"
-            pom.version = '0.0.10'
+            pom.version = '0.0.11'
             pom.groupId = 'jp.co.ricoh.cotos'
             pom.artifactId = 'common-libraries'
         }
