--- a/src/test/resources/config/application-ci.yml
+++ b/src/test/resources/config/application-ci.yml
@@ -13,4 +13,4 @@ spring:
         show_sql: true
         use_sql_comments: false
         format_sql: false
-        default_schema: cotos_ci
+        default_schema: cotos_ci_2nd
