レビューバック対応

--- a/src/test/resources/config/application-fail.yml
+++ b/src/test/resources/config/application-fail.yml
@@ -10,4 +10,8 @@ cotos:
     uploadFileDir: ./build/testTemp
     fileMaxSize: 122
     fileNmMaxSize: 14
-    extension: xls, csv, txt, docx
+    extension:
+       - xls
+       - csv
+       - txt
+       - docx
