--- a/src/test/resources/excel/entityData/single.yml
+++ b/src/test/resources/excel/entityData/single.yml
@@ -25,8 +25,8 @@ app:
     price: 1980
     count: 5
 appList:
-- title: "COTOS商材"
-  text: "テキスト"
+- title: "COTOS商材2018年"
+  text: "テキスト１"
   number: 4
   itemList:
   - code: "123456"
@@ -39,30 +39,10 @@ appList:
     date: "2018/12/01"
     price: 1850
     count: 2
-  - code: "345678"
-    name: "IFS"
-    date: "2019/02/01"
-    price: 1290
-    count: 3
-  - code: "456789"
-    name: "WWF"
-    date: "2019/04/01"
-    price: 1980
-    count: 5
-- title: "COTOS商材"
-  text: "テキスト"
+- title: "COTOS商材2019年"
+  text: "テキスト２"
   number: 4
   itemList:
-  - code: "123456"
-    name: "電力"
-    date: "2018/04/01"
-    price: 100
-    count: 1
-  - code: "234567"
-    name: "月額DB"
-    date: "2018/12/01"
-    price: 1850
-    count: 2
   - code: "345678"
     name: "IFS"
     date: "2019/02/01"
@@ -74,5 +54,5 @@ appList:
     price: 1980
     count: 5
 appTitleList:
-- "COTOS商材"
-- "COTOS商材"
+- "COTOS商材2018年"
+- "COTOS商材2019年"
