CommonLibs最新化(メール送信)

--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -23,6 +23,8 @@ cotos:
     extension: xlsx, txt
   search:
     limitSize: 5
+  mail:
+    fromMailAddress: test@ricoh.co.jp
 spring:
   datasource:
     url: jdbc:oracle:thin:@dev-db.cotos.ricoh.co.jp:1521/pdb1
