--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -17,7 +17,7 @@ cotos:
       requireDispAuthorize: X-Cotos-Require-Disp-Authorize
       dispAuthorization: X-Cotos-Disp-Authorization
   file:
-    uploadFileDir: .\build\testTemp
+    uploadFileDir: ./build/testTemp
     fileMaxSize: 616110
     fileNmMaxSize: 14
     extension: xlsx, txt
