--- a/src/test/resources/config/application-ci.yml
+++ b/src/test/resources/config/application-ci.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     url: jdbc:oracle:thin:@dev-db.cotos.ricoh.co.jp:1521/pdb1
-    username: cotos_ci_2nd
-    password: cotos_ci_2nd
+    username: cotos_ci_commonlibs
+    password: cotos_ci_commonlibs
     driverClassName: oracle.jdbc.OracleDriver
   jpa:
     database-platform: org.hibernate.dialect.Oracle12cDialect
