--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -34,8 +34,8 @@ cotos:
 spring:
   datasource:
     url: jdbc:oracle:thin:@dev-db.cotos.ricoh.co.jp:1521/pdb1
-    username: preci
-    password: preci
+    username: cotos_onsite
+    password: cotos_onsite
     driverClassName: oracle.jdbc.OracleDriver
   jpa:
     database-platform: org.hibernate.dialect.Oracle12cDialect
@@ -46,7 +46,7 @@ spring:
         show_sql: true
         use_sql_comments: true
         format_sql: true
-        default_schema: preci
+        default_schema: cotos_onsite
         proc:
           param_null_passing: true
         enable_lazy_load_no_trans: true
