JWT発行用PropertiesにアプリケーションID追加

--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -8,6 +8,7 @@ cotos:
         momEmpId: momEmpId
         singleUserId: singleUserId
         origin: origin
+        applicationId: applicationId
     headers:
       momEmpId: headers_mom_emp_id
       singleUserId: headers_single_user_id
