JWTに保存されているMoM権限情報を取得できるように改修

--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -9,6 +9,8 @@ cotos:
         singleUserId: singleUserId
         origin: origin
         applicationId: applicationId
+        momAuth: momAuth
+      activateNewAuthentication: true
     headers:
       momEmpId: headers_mom_emp_id
       singleUserId: headers_single_user_id
