--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -37,8 +37,8 @@ cotos:
 spring:
   datasource:
     url: jdbc:oracle:thin:@dev-db.cotos.ricoh.co.jp:1521/pdb1
-    username: cotos_ci_commonlibs
-    password: cotos_ci_commonlibs
+    username: cotos_ci_electric_std
+    password: cotos_ci_electric_std
     driverClassName: oracle.jdbc.OracleDriver
   jpa:
     database-platform: org.hibernate.dialect.Oracle12cDialect
@@ -49,7 +49,7 @@ spring:
         show_sql: true
         use_sql_comments: true
         format_sql: true
-        default_schema: cotos_ci_commonlibs
+        default_schema: cotos_ci_electric_std
         proc:
           param_null_passing: true
         enable_lazy_load_no_trans: true
