--- a/build.gradle
+++ b/build.gradle
@@ -77,7 +77,7 @@ uploadArchives {
             repository url: "file://${repo.absolutePath}"
             pom.version = '0.0.343'
             pom.groupId = 'jp.co.ricoh.cotos'
-            pom.artifactId = 'common-libraries'
+            pom.artifactId = 'dentos-common-libraries'
         }
     }
 }
