--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -58,7 +58,7 @@ spring:
       fail-on-empty-beans: false
   mail:
     default-encoding: UTF-8
-    host: dev.shipyard.cotos.ricoh.co.jp
+    host: el-st.shipyard.cotos.ricoh.co.jp
     port: 1025
     username: koike.shinichi
     password: koike.shinichi
