30517_awsサーバ接続情報修正（DEV）

--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -36,7 +36,7 @@ cotos:
       operatorOrgName: dummy_batch_operator_org
 spring:
   datasource:
-    url: jdbc:oracle:thin:@dev-db.cotos.ricoh.co.jp:1521/pdb1
+    url: jdbc:oracle:thin:@el-st-db-aws.cotos.ricoh.co.jp:1521/pdb1
     username: cotos_ci_commonlibs_el_std
     password: cotos_ci_commonlibs_el_std
     driverClassName: oracle.jdbc.OracleDriver
